--- a/lb_server.yaml
+++ b/lb_server.yaml
@@ -30,12 +30,17 @@ resources:
     type: OS::Nova::Server
     properties:
       flavor: {get_param: flavor}
-      image: {get_param: image}
+      # image: {get_param: image}
       key_name: {get_param: key_name}
       metadata: {get_param: metadata}
       user_data: {get_param: user_data}
       user_data_format: RAW
       networks: [{network: {get_param: network} }]
+      block_device_mapping:
+        - "volume_id": { get_resource: my_vol }
+          "delete_on_termination": true
+          "device_name": "vda"
+
   member:
     type: OS::Octavia::PoolMember
     properties:
@@ -43,6 +48,12 @@ resources:
       address: {get_attr: [server, first_address]}
       protocol_port: 80
       subnet: {get_param: subnet}
+
+  my_vol:
+    type: OS::Cinder::Volume
+    properties:
+      size: { get_param: vol_size }
+      image: { get_param: image }
 
 outputs:
   server_ip:
