--- a/lb_server3.yaml
+++ b/lb_server3.yaml
@@ -24,6 +24,10 @@ parameters:
   subnet:
     type: string
     description: Subnet used by the server
+  vol_size:
+    type: number
+    description: The size of the Cinder volume
+    default: 16
 
 resources:
   server:
